set CPUCOUNT by /proc/cpuinfo

--- a/alpine/python2/2/Dockerfile
+++ b/alpine/python2/2/Dockerfile
@@ -24,6 +24,6 @@ RUN mkdir /opt && cd /opt && \
     -D BUILD_opencv_python3=NO \
     .. && \
     make VERBOSE=1 && \
-    make && \
+    make -j${CPUCOUNT} && \
     make install && \
     rm -rf /opt/opencv-${OPENCV_VERSION}
