--- a/alpine/python2/Dockerfile
+++ b/alpine/python2/Dockerfile
@@ -1,5 +1,8 @@
 FROM python:3-alpine
 
+ENV CPUCOUNT 1
+RUN CPUCOUNT=$(cat /proc/cpuinfo | grep '^processor.*:' | wc -l)
+
 RUN echo "@edgunity http://nl.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories && \
     echo "@edge http://nl.alpinelinux.org/alpine/edge/main" >> /etc/apk/repositories && \
     echo "@testing http://nl.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories && \
