--- a/alpine/python3/2/Dockerfile
+++ b/alpine/python3/2/Dockerfile
@@ -30,6 +30,6 @@ RUN mkdir /opt && cd /opt && \
     -D PYTHON3_NUMPY_INCLUDE_DIRS=/usr/local/lib/python3.6/site-packages/numpy/core/include/ \
     .. && \
     make VERBOSE=1 && \
-    make && \
+    make -j${CPUCOUNT} && \
     make install && \
     rm -rf /opt/opencv-${OPENCV_VERSION}
