--- a/alpine/python3/3/Dockerfile
+++ b/alpine/python3/3/Dockerfile
@@ -30,7 +30,7 @@ RUN mkdir /opt && cd /opt && \
     -D PYTHON3_NUMPY_INCLUDE_DIRS=/usr/local/lib/python3.6/site-packages/numpy/core/include/ \
     .. && \
     make VERBOSE=1 && \
-    make && \
+    make -j${CPUCOUNT} && \
     make install && \
     rm -rf /opt/opencv-${OPENCV_VERSION} && \
     ln -s /usr/local/lib/python3.6/site-packages/cv2.cpython-36m-x86_64-linux-gnu.so /usr/local/lib/python3.6/site-packages/cv2.so
