--- a/alpine/node8/3/Dockerfile
+++ b/alpine/node8/3/Dockerfile
@@ -26,5 +26,4 @@ RUN cd /opt && \
     make VERBOSE=1 && \
     make -j${CPUCOUNT} && \
     make install && \
-    rm -rf /opt/opencv-${OPENCV_VERSION} && \
-    ln -s /usr/local/lib/python3.6/site-packages/cv2.cpython-36m-x86_64-linux-gnu.so /usr/local/lib/python3.6/site-packages/cv2.so
+    rm -rf /opt/opencv-${OPENCV_VERSION}
