--- a/debian/python3/2/Dockerfile
+++ b/debian/python3/2/Dockerfile
@@ -1,14 +1,12 @@
 FROM python:3.5-slim
 
 RUN apt update && \
-    apt install build-essential cmake git libgtk2.0-dev pkg-config libavcodec-dev libavformat-dev libswscale-dev && \
+    apt install -y build-essential cmake git libgtk2.0-dev pkg-config libavcodec-dev libavformat-dev libswscale-dev && \
     mkdir opencv && \
     cd opencv && \
-    git clone https://github.com/Itseez/opencv.git && \
+    git clone https://github.com/opencv/opencv.git && \
     mkdir build && \
     cd build && \
     cmake -D CMAKE_BUILD_TYPE=RELEASE -D CMAKE_INSTALL_PREFIX=/usr/local ../opencv && \
     make && \
-    make install 
-
-
+    make install
