--- a/debian/python2/2/Dockerfile
+++ b/debian/python2/2/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:2.7-slim
 
+ENV DEBIAN_FRONTEND noninteractive
+
 RUN apt update && \
     apt install -y build-essential cmake git libgtk2.0-dev pkg-config libavcodec-dev libavformat-dev libswscale-dev && \
     mkdir opencv && \
@@ -10,4 +12,4 @@ RUN apt update && \
     cmake -D CMAKE_BUILD_TYPE=RELEASE -D CMAKE_INSTALL_PREFIX=/usr/local ../opencv && \
     make && \
     make install && \
-    pip install opencv-python
+    pip install --upgrade pip opencv-python
